# coffea

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.rst  concepts.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py  wq.html
_static/: documentation_options.js
api/: coffea.analysis_tools.PackedSelection.html  coffea.analysis_tools.WeightStatistics.html  coffea.analysis_tools.Weights.html  coffea.btag_tools.BTagScaleFactor.html  coffea.hist.Bin.html  coffea.hist.Cat.html  coffea.hist.Hist.html  coffea.hist.Interval.html  coffea.hist.StringBin.html  coffea.hist.clopper_pearson_interval.html  coffea.hist.export1d.html  coffea.hist.normal_interval.html  coffea.hist.plot1d.html  coffea.hist.plot2d.html  coffea.hist.plotgrid.html  coffea.hist.plotratio.html  coffea.hist.poisson_interval.html  coffea.jetmet_tools.CorrectedJetsFactory.html  coffea.jetmet_tools.CorrectedMETFactory.html  coffea.jetmet_tools.FactorizedJetCorrector.html  coffea.jetmet_tools.JECStack.html  coffea.jetmet_tools.JetCorrectionUncertainty.html  coffea.jetmet_tools.JetResolution.html  coffea.jetmet_tools.JetResolutionScaleFactor.html  coffea.lookup_tools.evaluator.html  coffea.lookup_tools.extractor.html  coffea.lumi_tools.LumiData.html  coffea.lumi_tools.LumiList.html  coffea.lumi_tools.LumiMask.html  coffea.nanoevents.BaseSchema.html  coffea.nanoevents.NanoAODSchema.html  coffea.nanoevents.NanoEventsFactory.html  coffea.nanoevents.TreeMakerSchema.html  coffea.nanoevents.methods.base.NanoCollection.html  coffea.nanoevents.methods.base.NanoEvents.html  coffea.nanoevents.methods.candidate.Candidate.html  coffea.nanoevents.methods.candidate.PtEtaPhiMCandidate.html  coffea.nanoevents.methods.nanoaod.Electron.html  coffea.nanoevents.methods.nanoaod.FatJet.html  coffea.nanoevents.methods.nanoaod.FsrPhoton.html  (+36 more)
binder/: advanced_numba.ipynb  analysis_tools.ipynb  applying_corrections.ipynb  dataset_discovery.ipynb  filespec.ipynb  mltools.ipynb  nanoevents.ipynb  packedselection.ipynb  processing.ipynb  processor.ipynb  systematics.ipynb
docs/: Makefile
modules/: coffea.analysis_tools.html  coffea.btag_tools.html  coffea.hist.html  coffea.jetmet_tools.html  coffea.lookup_tools.html  coffea.lumi_tools.html  coffea.nanoevents.html  coffea.nanoevents.methods.base.html  coffea.nanoevents.methods.candidate.html  coffea.nanoevents.methods.nanoaod.html  coffea.nanoevents.methods.vector.html  coffea.processor.html  coffea.util.html
notebooks/: applying_corrections.html  histograms.html  nanoevents.html  processor.html
tests/: test_accumulators.py  test_analysis_tools.py  test_checkpointing.py  test_dataset_tools.py  test_dataset_tools_filespec.py  test_fix823.py  test_jetmet_tools.py  test_local_executors.py  test_lookup_tools.py  test_lumi_tools.py  test_ml_tools.py  test_nanoevents.py  test_nanoevents_delphes.py  test_nanoevents_edm4hep.py  test_nanoevents_fcc_edm4hep1.py  test_nanoevents_fcc_spring2021.py  test_nanoevents_fcc_winter2023.py  test_nanoevents_pdune.py  test_nanoevents_pfnano.py  test_nanoevents_physlite.py  test_nanoevents_rntuple.py  test_nanoevents_scoutingnano.py  test_nanoevents_treemaker.py  test_nanoevents_vector.py  test_parsl.py  test_processor.py  test_skyhook_job.py  test_systematics.py  test_taskvine.py  test_taskvine_dask.py  test_taskvine_virtual.py  test_util.py  (+1 more)
(+121 files in other folders)
